# determinant

./: .gitignore  CMakeLists.txt  README.md  determinant.cpp  main.cpp
gmp/: libgmp.la  libgmpxx.la
include/: determinant.h  gmp.h
